# Lab11

./: CMakeLists.txt
builder/: builder.cpp
include/: my_cmake.hpp
sources/: my_cmake.cpp
